# MyLittleHarness

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/: docmap.yaml
.codex/: project-workflow.toml
.github/workflows/: tests.yml
build_backend/: mylittleharness_build.py
docs/: README.md  security.md
docs/architecture/: clean-room-carry-forward.md  layer-model.md  product-architecture.md  target-architecture.md
docs/reference/: command-surface.md
docs/specs/: adapter-boundary.md  attach-repair-status-cli.md  authority-and-memory.md  context-and-ceremony-budget.md  generated-state-and-projections.md  generated-state-search-and-sqlite.md  mcp-ecosystem-adoption-gate.md  metadata-routing-and-evidence.md  operating-root-and-switch-over.md  operating-root.md  product-boundary.md
project/: project-state.md
project/specs/workflow/: workflow-artifact-model-spec.md  workflow-capability-roadmap-spec.md  workflow-plan-synthesis-spec.md  workflow-rollout-slices-spec.md  workflow-verification-and-closeout-spec.md
src/mylittleharness/: __init__.py  adapter.py  agent_roles.py  approval_packets.py  atomic_files.py  attachments.py  bootstrap.py  checks.py  claims.py  cli.py  cli_parser.py  closeout.py  command_discovery.py  context_memory.py  daemon.py  dashboard.py  evidence.py  evidence_cues.py  grain.py  handoff.py  hooks.py  incubate.py  inventory.py  lifecycle_focus.py  memory_hygiene.py  meta_feedback.py  mirror.py  models.py  parsing.py  planning.py  preflight.py  product_hygiene_checks.py  projection.py  projection_artifacts.py  projection_index.py  reconcile.py  relationship_drift.py  reporting.py  research_compare.py  research_distill.py  (+12 more)
src/mylittleharness/templates/operating-root/: AGENTS.md
src/mylittleharness/templates/workflow/: workflow-artifact-model-spec.md  workflow-capability-roadmap-spec.md  workflow-plan-synthesis-spec.md  workflow-rollout-slices-spec.md  workflow-verification-and-closeout-spec.md
tests/: test_attachment_import.py  test_cli.py  test_cli_parser.py  test_inventory.py  test_lifecycle_focus.py  test_memory_hygiene.py  test_package_metadata.py  test_parsing.py  test_planning.py  test_projection.py  test_projection_artifacts.py  test_projection_index.py  test_relationship_drift.py  test_research_compare.py  test_research_distill.py  test_research_intake.py  test_vcs.py
